[tool.poetry]
name = "t2f"
version = "0.1.6"
description = "TVM Assembly to Fift Assembly Translator"
authors = ["Andrew Gutarev <gutarev01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
t2f = "t2f.t2f:main"